Included all patient's "Outliers in Treatment Statistics" information.

--- a/summaries/Website/patient_report_feb_2019.Rmd
+++ b/summaries/Website/patient_report_feb_2019.Rmd
@@ -2192,6 +2192,10 @@ timevis(data = C1J_signif, groups = C1J_groups1, showZoom = FALSE, zoomFactor = 
 
 <br />
 
+* C1-J's fourth treatment session hours were inconsistent and possibly inaccurate due to the uncertainty of the effectiveness of the smaller portable device prototype.
+
+* C1-J's fifth and sixth treatment sessions were occasionally interrupted by an increased number of bathroom breaks and medical complications (including anxiety attacks and bleeding from a small cut in the left leg).
+
 *****
 
 #### Complete Medical Imaging Results
@@ -2523,6 +2527,12 @@ timevis(data = B1S_signif, groups = B1S_groups1, showZoom = FALSE, zoomFactor = 
 #### Outliers in Treatment Statistics
 
 <br />
+
+* B1-S's third treatment session was extremely short compared to the previous two, and thus had a lack of polarity measurements to accurately monitor the response of the patient.
+
+* B1-S's second break was very long (39 days without treatment), especially considering that her condition at the time was developing at an increased rate.
+
+* B1-S had been diagnosed with an aggressive recurrence of inflammatory breast cancer before her third treatment session.
 
 *****
 
@@ -2868,6 +2878,14 @@ timevis(data = L2E_signif, groups = L2E_groups1, showZoom = FALSE, zoomFactor = 
 
 <br />
 
+* L2-E's third session saw a drastic increase in the use of the Tumor Treating Fields (TTF) Device, as well as an increase in overall treatment hours.
+
+* According to the analysis of treatment-response data, L2E probably crossed a possible "effectiveness threshold" on his third session. The relation between treatment hours and polarity seems to transition from linear to exponential decay after polarity is less than 8.
+
+* L2-E's fourth treatment session hours were inconsistent and possibly inaccurate due to the uncertainty of the effectiveness of the smaller portable device prototype.
+
+* L2-E's fifth treatment session hours increased compared to previous sessions, but were possibly inaccurate due to the uncertainty of the effectiveness of the smaller portable device prototype.
+
 *****
 
 #### Complete Medical Imaging Results
@@ -3093,6 +3111,10 @@ timevis(data = H1A_timeline, groups = H1A_groups, showZoom = FALSE, zoomFactor =
 #### Outliers in Treatment Statistics
 
 <br />
+
+* H1-A's fourth treatment session had very few polarity measurements and inconsistent number of hours per day. 
+
+* According to the analysis of treatment-response data, H1A probably crossed a possible "effectiveness threshold" on her second, fourth, and fifth sessions. The relation between treatment hours and polarity seems to transition from linear to exponential decay after polarity is less than 7. However, a potential confounding variable could be the significance of short treatments (18 hours in 5 days and 16 hours in 4 days).
 
 *****
 
@@ -3496,6 +3518,10 @@ timevis(data = L3K_signif, groups = L3K_groups1, showZoom = FALSE, zoomFactor = 
 
 <br />
 
+* L3-K's fourth treatment session was very short (4 days, 31.5 hours) and the few polarity measurements were inconsistent (some were after treatment and others mid-treatment).
+
+* L3-K's fourth treatment session was constantly interrupted by an increased number of bathroom breaks.
+
 *****
 
 #### Complete Medical Imaging Results
@@ -3739,6 +3765,8 @@ timevis(data = G1D_timeline, groups = G1D_groups, showZoom = FALSE, zoomFactor =
 #### Outliers in Treatment Statistics
 
 <br />
+
+* G1-D's treatment sessions were all very short (less than 20 hours) and the few polarity measurements are all within the 0-10 range, which might not truly represent the totality of the treatment effect.
 
 *****
 
@@ -3997,6 +4025,8 @@ timevis(data = L1J_signif, groups = L1J_groups1, showZoom = FALSE, zoomFactor = 
 #### Outliers in Treatment Statistics
 
 <br />
+
+* L1-J had only one treatment session, which results in a limited sample of data that is probably not representative of the treatment effect. However, this unique treatment session was exemplary regarding total duration, consistent hours per day, and regular polarity measurements. 
 
 *****
 
